update note on tf2

--- a/src/content/docs/en/ros2/index.mdx
+++ b/src/content/docs/en/ros2/index.mdx
@@ -36,7 +36,7 @@ Content Outline:
 
 Intermediate - Tooling
 - Visualization tool, RVIZ2 and friends
-- [TF tree, Frames and Transformations with TF2](ros2/tf2)
+- [Coordinate frames, TF tree and TF2](ros2/tf2)
 - [Robot model description formats](ros2/description)
 - [Introduction to Gazebo](ros2/gazebo)
 - Building sim environment in Gazebo
