add paper on scalling laws and sizing

--- a/src/content/docs/en/drones/dynamics.mdx
+++ b/src/content/docs/en/drones/dynamics.mdx
@@ -12,7 +12,9 @@ description: System modeling and identification
     - Rotations
     - translation
 - Modeling
-- Scaling laws. @kumarOpportunitiesChallengesAutonomous2017
+- Scaling laws.
+  - @delbecqEfficientSizingOptimization2020 (best-in-class)
+  - @kumarOpportunitiesChallengesAutonomous2017
 
 Some references for simulation generals:
 - @muraleedharanModellingSimulationUAV2020
