--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -1795,3 +1795,17 @@ DOI: 10.1007/11840541_68},
   isbn = {978-1-4673-6225-2 978-1-4673-6223-8 978-1-4673-6224-5},
   langid = {english}
 }
+@article{delbecqEfficientSizingOptimization2020,
+  title = {Efficient Sizing and Optimization of Multirotor Drones Based on Scaling Laws and Similarity Models},
+  author = {Delbecq, S. and Budinger, M. and Ochotorena, A. and Reysset, A. and Defay, F.},
+  date = {2020-07},
+  journaltitle = {Aerospace Science and Technology},
+  shortjournal = {Aerospace Science and Technology},
+  volume = {102},
+  pages = {105873},
+  issn = {12709638},
+  doi = {10.1016/j.ast.2020.105873},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1270963820305551},
+  urldate = {2026-01-18},
+  langid = {english}
+}
